Fix spacing on cancel, end turn and pass buttons

--- a/src/App.css
+++ b/src/App.css
@@ -161,15 +161,3 @@
   font-size: 24px;
   background-color: dodgerblue;
 }
-
-.cancel-button {
-  margin-right: 10px;
-}
-
-.end-turn-button {
-  margin-right: 10px;
-}
-
-.pass-button {
-  margin-right: 10px;
-}
